test/negative/const_reassign.mut
# Negative: reassign a constant
const MAX: i64 = 100
MAX = 200
